# ai-voice-server

./: README.md  ROADMAP.md  install_test.sh
client/: README.md  dictate.sh
docs/: api-contract.md  architecture.md  client-plan.md  client_test_plan.md  server-plan.md  server_test_plan.md
packaging/: ai-voice-server.sh
packaging/systemd/: 99-ai-voice-egpu.rules  ai-voice-client.service  ai-voice-server.conf  ai-voice-server.service  udevmon.yaml
python-prototype/: main.py  pyproject.toml
python-prototype/client/: dictate.sh
python-prototype/server/: start.sh  test_model.py
python-prototype/server/systemd/: ai-voice-server.conf  ai-voice-server.service
server/: server.py
server/systemd/: ai-voice-server.service
src/client/: Cargo.toml  README.md
src/client/.cargo/: config.toml
src/client/daemon/: Cargo.toml
src/client/daemon/src/: audio.rs  main.rs  network.rs  ui.rs
src/client/interception_plugin/: Cargo.toml
src/client/interception_plugin/src/: keys.rs  main.rs
src/server/: .env.example  .gitignore  Cargo.toml
src/server/src/: config.rs  main.rs
src/server/src/routes/: admin.html  admin.rs  health.rs  mod.rs  model.rs  stream.rs
src/server/src/transcribe/: engine.rs  queue.rs
tests/: client_hotkey_install.sh  client_hotkey_uninstall.sh  client_install.sh  client_uninstall.sh  test_server.py
