[project]
name = "ai-voice-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.24.0.43",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.50.2",
]
