[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
whisper-rs = "0.16.0"
reqwest = { version = "0.12.12", features = ["stream"] }
futures-util = "0.3.31"

[features]
nvidia = ["whisper-rs/cuda"]
rocm = ["whisper-rs/hipblas"]
vulkan = ["whisper-rs/vulkan"]
openblas = ["whisper-rs/openblas"]
