[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
dotenvy = "0.15.7"
env_logger = "0.11.11"
futures-util = "0.3.32"
gtk4 = "0.11.4"
gtk4-layer-shell = "0.8.0"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.30.0"
url = "2.5.8"
